# hbd-siglip2.cpp

./: .dockerignore  .gitignore  AGENT-START-HERE.md  AGENTS.md  CMakeLists.txt  Dockerfile  HANDOFF-megakernel-v0-phaseC-microbench.md  HANDOFF-megakernel-v0-phaseC-next.md  HANDOFF-megakernel-v0.md  HANDOFF-perf-next.md  HANDOFF-prod.md  HANDOFF.md  LICENSE  README.md  docker-compose.yml
bench/: microbench_cublaslt_helpers.cu  microbench_cublaslt_helpers.cuh  microbench_mmq.cpp
scripts/: _probe_text.py  bench_vs_python.py  convert_siglip2_to_gguf.py  convert_tokenizer_to_gguf.py  parity_check_image.py  parity_check_score.py  parity_check_text.py  parity_check_tokenizer.py  parity_check_vision.py  refresh_upstream_refs.sh
src/: audio_tokenizer_decoder.cpp  audio_tokenizer_decoder.h  gguf_loader.cpp  gguf_loader.h  qwen3_tts.cpp  qwen3_tts.h  qwen3tts_c_api.cpp  server.cpp  siglip2_cli.cpp  siglip2_preproc.cpp  siglip2_preproc.h  siglip2_score.cpp  siglip2_score.h  siglip2_server.cpp  siglip2_text.cpp  siglip2_text.h  siglip2_text_cli.cpp  siglip2_tokenizer.cpp  siglip2_tokenizer.h  siglip2_vision.cpp  siglip2_vision.h  tts_transformer.cpp  tts_transformer.h  worker_ipc.cpp  worker_ipc.h  worker_session.cpp  worker_session.h
src/cuda/: siglip2_custom_mmq.cu  siglip2_custom_mmq.cuh  siglip2_megakernel.cu  siglip2_megakernel.cuh  siglip2_megakernel.h  siglip2_megakernel_stub.cpp
tools/siglip2-quantize/: main.cpp
